--- a/config/hydra/default.yaml
+++ b/config/hydra/default.yaml
@@ -1,7 +1,7 @@
 hydra:
   run:
-    dir: ./outputs/${data.name}-${model.encoder}-${model.pooling}
+    dir: ./outputs/${hydra.job.config_name}-${data.name}-${model.encoder}-${model.pooling}
 
   sweep:
     dir: ./outputs/
-    subdir: ${data.name}-${model.encoder}-${model.pooling}
+    subdir: ${hydra.job.config_name}-${data.name}-${model.encoder}-${model.pooling}
