--- a/config/hallmarks_config.yaml
+++ b/config/hallmarks_config.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - dataset: ohsumed_classification
+  - dataset: hallmarks_classification
   - encoder: gru
   - normalizer: document
   - pooling: category_attention
