--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ seaborn = "^0.10.1"
 altair = "^4.1.0"
 hydra-core = {version = "^1.0.0-rc.1", allow-prereleases = true}
 altair_saver = "^0.5.0"
+clean-text = "^0.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
