--- a/config/aviation_config.yaml
+++ b/config/aviation_config.yaml
@@ -14,13 +14,13 @@ model:
   is_bidirectional: True
   word_embedding_dims: 300
   graph_embedding_dims: 100
-  document_embedding_dims: 384
+  document_embedding_dims: 352
   min_category_dimensions: 32
 
 training:
-  learning_rate: 0.0001
+  learning_rate: 0.001
   batch_size: 32
-  samples_per_document: 8
+  samples_per_document: 4
   sampling: error_weighted
   k_embedding: 32
   k_graph: 32
@@ -35,7 +35,7 @@ validation:
   num_workers: 4
 
 trainer:
-  gpus: 1
+  gpu: 3
   patience: 1
   max_epochs: 20
   export_embeddings: False
