--- a/config/aviation_email_ablation_config.yaml
+++ b/config/aviation_email_ablation_config.yaml
@@ -14,7 +14,7 @@ model:
   is_bidirectional: True
   word_embedding_dims: 300
   graph_embedding_dims: 100
-  document_embedding_dims: 384
+  document_embedding_dims: 352
   min_category_dimensions: 32
 
 training:
@@ -22,20 +22,20 @@ training:
   batch_size: 32
   samples_per_document: 4
   sampling: error_weighted
-  k_embedding: 16
-  k_graph: 16
+  k_embedding: 32
+  k_graph: 32
   num_workers: 4
 
 validation:
   batch_size: 32
   samples_per_document: 4
   sampling: error_weighted
-  k_embedding: 16
-  k_graph: 16
+  k_embedding: 32
+  k_graph: 32
   num_workers: 4
 
 trainer:
-  gpus: 1
+  gpu: 3
   patience: 1
   max_epochs: 20
   export_embeddings: False
