--- a/config/ohsumed_ablation_config.yaml
+++ b/config/ohsumed_ablation_config.yaml
@@ -22,25 +22,25 @@ training:
   batch_size: 32
   samples_per_document: 4
   sampling: error_weighted
-  k_embedding: 16
-  k_graph: 16
+  k_embedding: 32
+  k_graph: 32
   num_workers: 4
 
 validation:
   batch_size: 32
   samples_per_document: 4
   sampling: error_weighted
-  k_embedding: 16
-  k_graph: 16
+  k_embedding: 32
+  k_graph: 32
   num_workers: 4
 
 trainer:
-  gpus: 1
+  gpu: 3
   patience: 1
   max_epochs: 20
   export_embeddings: False
 
 ablation:
-  num_samples:
+  num_samples: 100
   attention_map: True
   distance_map: True
