Add random baseline

--- a/config/aviation_case_ablation_config.yaml
+++ b/config/aviation_case_ablation_config.yaml
@@ -1,7 +1,7 @@
 defaults:
   - dataset: aviation_case_ablation
   - encoder: gru
-  - normalizer: corpus
+  - normalizer: pass
   - pooling: category_attention
   - word: fasttext
   - graph: aviation
