--- a/config/medsts_config.yaml
+++ b/config/medsts_config.yaml
@@ -1,6 +1,6 @@
 defaults:
   - dataset: medsts
-  - encoder: gru
+  - encoder: lstm
   - normalizer: pass
   - pooling: category_attention
   - word: fasttext
