--- a/config/aviation_config.yaml
+++ b/config/aviation_config.yaml
@@ -1,6 +1,6 @@
 defaults:
   - dataset: aviation_task_classification
-  - encoder: gru
+  - encoder: lstm
   - normalizer: corpus
   - pooling: category_attention
   - word: fasttext
