--- a/config/medicine_config.yaml
+++ b/config/medicine_config.yaml
@@ -1,6 +1,6 @@
 defaults:
   - dataset: ohsumed
-  - encoder: gru
+  - encoder: lstm
   - normalizer: corpus
   - pooling: category_attention
   - word: fasttext
