--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ altair = "^4.1.0"
 hydra-core = {version = "^1.0.0-rc.1", allow-prereleases = true}
 altair_saver = "^0.5.0"
 clean-text = "^0.1.1"
+streamlit = "^0.69.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
